<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.myxxr</groupId>
    <artifactId>BetterLANBroadcaster</artifactId>
    <version>1.0.2</version>

    <name>BetterLANBroadcaster-Velocity</name>
    <description>BetterLANBroadcaster ported to Velocity</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>21</maven.compiler.release>
        <velocity.version>3.4.0</velocity.version>
        <adventure.version>4.26.1</adventure.version>
        <configurate.version>4.2.0</configurate.version>
    </properties>

    <repositories>
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>
    </repositories>

    <dependencies>

        <!-- Velocity API -->
        <dependency>
            <groupId>com.velocitypowered</groupId>
            <artifactId>velocity-api</artifactId>
            <version>${velocity.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Adventure MiniMessage -->
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>adventure-text-minimessage</artifactId>
            <version>${adventure.version}</version>
        </dependency>

        <!-- Configurate YAML -->
        <dependency>
            <groupId>org.spongepowered</groupId>
            <artifactId>configurate-yaml</artifactId>
            <version>${configurate.version}</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>

            <!-- Java compiler + Velocity annotation processing -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>

                <configuration>
                    <release>${maven.compiler.release}</release>

                    <annotationProcessorPaths>
                        <path>
                            <groupId>com.velocitypowered</groupId>
                            <artifactId>velocity-api</artifactId>
                            <version>${velocity.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

        </plugins>
    </build>

</project>